# autobean

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
examples/: github-workflow.yml
src/: annual.rs  balance.rs  error.rs  fingerprint.rs  ingest.rs  ledger.rs  location.rs  main.rs  readable.rs
src/appendix/: mod.rs  statement.rs
src/lints/: appendix_missing.rs  document_missing.rs  double_entry.rs  duplicate_appendix.rs  duplicates.rs  mod.rs  sequential_appendix.rs  unbalanced.rs
