[package]
name = "autobean"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4.17"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
itertools = "0.10.3"
thiserror = "1.0.31"
colored = "2.0.0"
unindent = "0.1.9"
regex = "1.5.6"
once_cell = "1.12.0"
clap = { version = "3.2.8", features = ["derive"] }
beancount-core = { git = "https://github.com/twilco/beancount" }
beancount-parser = { git = "https://github.com/twilco/beancount" }
beancount-render = { git = "https://github.com/twilco/beancount" }