[package]
name = "autobean"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
itertools = "0.12.1"
thiserror = "1"
colored = "2"
unindent = "0.2.3"
regex = "1"
once_cell = "1"
clap = { version = "4.3", features = ["derive"] }
beancount-core = { git = "https://github.com/twilco/beancount" }
beancount-parser = { git = "https://github.com/twilco/beancount" }
beancount-render = { git = "https://github.com/twilco/beancount" }
